--- a/hotel-booking-system-frontend/package.json
+++ b/hotel-booking-system-frontend/package.json
@@ -14,9 +14,11 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0"
