--- a/hotel-booking-system-frontend/package.json
+++ b/hotel-booking-system-frontend/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.26.3",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
@@ -24,10 +23,14 @@
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "babel-loader": "^10.0.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
