--- a/hotel-booking-system-frontend/package.json
+++ b/hotel-booking-system-frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
